--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,10 @@ torch
 timm>=0.9.10
 huggingface-hub>=0.23.0
 open_clip_torch
+einops
+imageio
+ipympl
+numpy
+tensorboard
+tensorboardX
+blobfile>=1.0.5
